# hongik-jiki

./:  inspect_vector_store.py  .gitignore  CLAUDE.md  Jungbub_videos.csv  README.md  __init__.py  add_documents_to_vectorstore.py  analyze_chunks.py  analyze_directories.py  app.py  chatbot_test.py  chatbot_with_tags_ui.py  copy_files.py  diagnose_loader.py  diagnose_processing.py  export_sample_chunks.py  export_sample_qas.py  fix_tag_files.py  inspect_vector_store.py  jungbub_test_questions.numbers  llm_test.py  load_jungbub_documents.py  main.py  pyproject.toml  python3 fix_metadata_handling.py  requirements.txt  run_pipeline.sh  setup.py  tag_all_documents.py  test_chatbot_with_tags.py  test_meta.py  test_processor.py  test_tagging.py  test_vector_store.py  troubleshoot_server.py  upload_to_huggingface.py  verify_jungbub_documents.py
.github/workflows/: build_qa. yml  build_qa.yml  push_high_insight.yml  qa_pipeline.yml
data/: chroma.sqlite3  processed_files.json
data/config/: tag_patterns.json  tag_schema.yaml
data/jungbub_teachings/: 002. 을동6  내조.rtf
hongikjiki/: __init__.py  chatbot.py  cli.py  document_manager.py  text_processor.py  utils.py  vector_store.py  web.py
hongikjiki.egg-info/: SOURCES.txt  requires.txt  top_level.txt
hongikjiki_backup/: __init__.py  document_manager.py  document_manager_test.py  text_processor.py  utils.py
output/: chunks.json  metadata.json
scripts/: aggregate_qa.py
templates/: 404.html  500.html  index.html
홍익지기 챗봇 마스터 플랜/: Hongik-Jiki Chatbot Masterplan .txt  태그 시스템 추가 구조.txt  홍익지기 챗봇 구조.txt  홍익지기 태그 시스템 구현 계획.txt
(+12030 files in other folders)
